2003-07-12  Chris Hostetter  <hossman at users * sourceforge * net>

	* patch#708540 new site for Dr. Fun
	* patch#708545 Bizaro moved from ucomics to kingfeatures, 
		Trudy not on sundays
	* patch#750359 Real Life is now self hosting, moved from
		keenspot to it's own module
	* patch#750489 Little Gamers was broken, now it's not
	* fixed The Norm (new URLs)

2002-12-02  Ben Hochstedler  <hochstrb@cs.rose-hulman.edu>

	* MANIFEST, Makefile.PL, lib/eightbit: Added Eight-Bit Theatre
	thanks to Shawn Oakey.

2002-11-19  Elliot Glaysher  <glaysher@umich.edu>

	* lib/keenspot (wigu): Author let domain expire. Changed to 
	wigu.keenspot.com...
	* lib/down_earth: Website says downtoearth is down. Redirects to a 
	portal. Assuming dead and removing.
	* lib/kingfeatures (pardon): s/I_Need_Help/Pardon_My_Planet/;
	(wildwood): Removed dead comic.

2002-10-17  Elliot Glaysher  <glaysher@umich.edu>

	* lib/small_grey (grey): Generally works now. Reset daysbehind and
	added logic to determine if a comic wwas gif or jpg.
	* lib/small_world (smwrld): Fixed.
	* lib/wfc (gib): Gibberish has gone missing. The famousdesigns page
	is GONE, and the wfcomics site makes no mention of a comic called
	"Gibberish"
	* lib/angry_flower (btaf): s/qwik.htm/qwik.html/;
	* lib/toytrunk: Since it hasn't been updated in so long, reseting
	the daysbehind.
	* lib/rocky: Removing as the page now 404s.
	* lib/fika: Removing as the page now 404s.

2002-10-15  Elliot Glaysher  <glaysher@umich.edu>

	* lib/kingfeatures: All kingfeatures are set back 14 days.

2002-10-13  Elliot Glaysher  <glaysher@umich.edu>

	* lib/badlands (badlands): ".gif" != ".GIF" !!! (Module still doesn't
	work since the comic hasn't been updated since June, though...)
	* lib/lily_wong: Comic finished. Changed website and reset date.

2002-10-11  Elliot Glaysher  <glaysher@umich.edu>

	* lib/unitedmedia: Remove Randolph Itch as it's been discontinued.
	* lib/keenspot, lib/keenspace: Updates and organizations by Shawn Oakey